Fix 'operating' typo in .po files.

--- a/po/bg.po
+++ b/po/bg.po
@@ -2463,7 +2463,7 @@ msgstr ""
 
 #: ../src/vmm-create.glade.h:16
 #, fuzzy
-msgid "Choose how you would like to install the opertaing system"
+msgid "Choose how you would like to install the operating system"
 msgstr ""
 "Моля укажете как бихте искали да свържете новата виртуална система с мрежата "
 "на физическата машина."
