--- a/po/bn_IN.po
+++ b/po/bn_IN.po
@@ -2426,7 +2426,7 @@ msgstr ""
 
 #: ../src/vmm-create.glade.h:16
 #, fuzzy
-msgid "Choose how you would like to install the opertaing system"
+msgid "Choose how you would like to install the operating system"
 msgstr "অনুগ্রহ করে ভার্চুয়াল ডিসপ্লে প্রদর্শনের প্রণালী উল্লেখ করুন।"
 
 #: ../src/vmm-create.glade.h:17 ../src/vmm-host.glade.h:13
