--- a/po/ca.po
+++ b/po/ca.po
@@ -2471,7 +2471,7 @@ msgstr ""
 
 #: ../src/vmm-create.glade.h:16
 #, fuzzy
-msgid "Choose how you would like to install the opertaing system"
+msgid "Choose how you would like to install the operating system"
 msgstr "Si us plau indiqueu com voleu veure la pantalla del convidat."
 
 #: ../src/vmm-create.glade.h:17 ../src/vmm-host.glade.h:13
