--- a/po/de.po
+++ b/po/de.po
@@ -2497,7 +2497,7 @@ msgstr ""
 
 #: ../src/vmm-create.glade.h:16
 #, fuzzy
-msgid "Choose how you would like to install the opertaing system"
+msgid "Choose how you would like to install the operating system"
 msgstr "Bitte geben Sie an, wie Sie die Gast-Anzeige sehen möchten."
 
 #: ../src/vmm-create.glade.h:17 ../src/vmm-host.glade.h:13
