--- a/po/fi.po
+++ b/po/fi.po
@@ -2458,7 +2458,7 @@ msgstr ""
 
 #: ../src/vmm-create.glade.h:16
 #, fuzzy
-msgid "Choose how you would like to install the opertaing system"
+msgid "Choose how you would like to install the operating system"
 msgstr "Kuinka haluat katsoa vierasjärjestelmän näyttöä?"
 
 #: ../src/vmm-create.glade.h:17 ../src/vmm-host.glade.h:13
