--- a/po/fr.po
+++ b/po/fr.po
@@ -2496,7 +2496,7 @@ msgstr ""
 
 #: ../src/vmm-create.glade.h:16
 #, fuzzy
-msgid "Choose how you would like to install the opertaing system"
+msgid "Choose how you would like to install the operating system"
 msgstr ""
 "Veuillez indiquer comment vous souhaiteriez visualiser l'affichage de "
 "l'invité."
