--- a/po/gu.po
+++ b/po/gu.po
@@ -2402,7 +2402,7 @@ msgstr ""
 
 #: ../src/vmm-create.glade.h:16
 #, fuzzy
-msgid "Choose how you would like to install the opertaing system"
+msgid "Choose how you would like to install the operating system"
 msgstr "મહેરબાની કરીને સૂચિત કરો કે કેટલા વર્ચ્યુઅલ દેખાવને દર્શાવાનું ગમે છે."
 
 #: ../src/vmm-create.glade.h:17 ../src/vmm-host.glade.h:13
