--- a/po/hi.po
+++ b/po/hi.po
@@ -2455,7 +2455,7 @@ msgstr ""
 
 #: ../src/vmm-create.glade.h:16
 #, fuzzy
-msgid "Choose how you would like to install the opertaing system"
+msgid "Choose how you would like to install the operating system"
 msgstr "कृपया बताएँ कि कैसे आप अतिथि प्रदर्शन को दिखाना चाहेंगे."
 
 #: ../src/vmm-create.glade.h:17 ../src/vmm-host.glade.h:13
