--- a/po/hr.po
+++ b/po/hr.po
@@ -2457,7 +2457,7 @@ msgstr ""
 
 #: ../src/vmm-create.glade.h:16
 #, fuzzy
-msgid "Choose how you would like to install the opertaing system"
+msgid "Choose how you would like to install the operating system"
 msgstr ""
 "Naznačite na koji biste način željeli svoj novi virtualni sustav povezati s "
 "mrežom udomitelja."
