--- a/po/ja.po
+++ b/po/ja.po
@@ -2420,7 +2420,7 @@ msgstr ""
 
 #: ../src/vmm-create.glade.h:16
 #, fuzzy
-msgid "Choose how you would like to install the opertaing system"
+msgid "Choose how you would like to install the operating system"
 msgstr "仮想ディスプレイをどのように表示するかを示してください。"
 
 #: ../src/vmm-create.glade.h:17 ../src/vmm-host.glade.h:13
