--- a/po/kn.po
+++ b/po/kn.po
@@ -2361,7 +2361,7 @@ msgid "Choose an operating systen type and version"
 msgstr "ಒಂದು ಕಾರ್ಯವ್ಯವಸ್ಥೆಯನ್ನು ಹಾಗು ಆವೃತ್ತಿಯನ್ನು ಆಯ್ಕೆ ಮಾಡಿ"
 
 #: ../src/vmm-create.glade.h:16
-msgid "Choose how you would like to install the opertaing system"
+msgid "Choose how you would like to install the operating system"
 msgstr "ಕಾರ್ಯವ್ಯವಸ್ಥೆಯನ್ನು ನೀವು ಹೇಗೆ ಅನುಸ್ಥಾಪಿಸಲು ಬಯಸುತ್ತೀರೆ ಎಂಬುದನ್ನು ಸೂಚಿಸಿ"
 
 #: ../src/vmm-create.glade.h:17 ../src/vmm-host.glade.h:13
