--- a/po/ml.po
+++ b/po/ml.po
@@ -2357,7 +2357,7 @@ msgid "Choose an operating systen type and version"
 msgstr ""
 
 #: ../src/vmm-create.glade.h:16
-msgid "Choose how you would like to install the opertaing system"
+msgid "Choose how you would like to install the operating system"
 msgstr ""
 
 #: ../src/vmm-create.glade.h:17 ../src/vmm-host.glade.h:13
