--- a/po/mr.po
+++ b/po/mr.po
@@ -2336,7 +2336,7 @@ msgid "Choose an operating systen type and version"
 msgstr "कार्यप्रणाली प्रकार व आवृत्ती निवडा"
 
 #: ../src/vmm-create.glade.h:16
-msgid "Choose how you would like to install the opertaing system"
+msgid "Choose how you would like to install the operating system"
 msgstr "कार्यप्रणाली कुठल्या रिती प्रतिष्ठापीत करायचे ते निवडा"
 
 #: ../src/vmm-create.glade.h:17 ../src/vmm-host.glade.h:13
