--- a/po/or.po
+++ b/po/or.po
@@ -2368,7 +2368,7 @@ msgid "Choose an operating systen type and version"
 msgstr "ଗୋଟିଏ ପ୍ରଚାଳନ ତନ୍ତ୍ର ପ୍ରକାର ଏବଂ ସଂସ୍କରଣ ବାଛନ୍ତୁ"
 
 #: ../src/vmm-create.glade.h:16
-msgid "Choose how you would like to install the opertaing system"
+msgid "Choose how you would like to install the operating system"
 msgstr "ଆପଣ ଆପଣଙ୍କର ପ୍ରଚାଳନ ତନ୍ତ୍ରକୁ କିପରି ସ୍ଥାପନ କରିବେ ତାହା ବାଛନ୍ତୁ"
 
 #: ../src/vmm-create.glade.h:17 ../src/vmm-host.glade.h:13
