--- a/po/pt.po
+++ b/po/pt.po
@@ -2471,7 +2471,7 @@ msgstr ""
 
 #: ../src/vmm-create.glade.h:16
 #, fuzzy
-msgid "Choose how you would like to install the opertaing system"
+msgid "Choose how you would like to install the operating system"
 msgstr ""
 "Indique por favor como deseja ligar o seu novo sistema virtual à rede "
 "anfitriã."
