--- a/po/sr.po
+++ b/po/sr.po
@@ -2463,7 +2463,7 @@ msgstr ""
 
 #: ../src/vmm-create.glade.h:16
 #, fuzzy
-msgid "Choose how you would like to install the opertaing system"
+msgid "Choose how you would like to install the operating system"
 msgstr ""
 "Назначите како желите да повежете нови виртуелни систем са мрежом домаћина."
 
