--- a/po/sr@latin.po
+++ b/po/sr@latin.po
@@ -2464,7 +2464,7 @@ msgstr ""
 
 #: ../src/vmm-create.glade.h:16
 #, fuzzy
-msgid "Choose how you would like to install the opertaing system"
+msgid "Choose how you would like to install the operating system"
 msgstr ""
 "Naznačite kako želite da povežete novi virtuelni sistem sa mrežom domaćina."
 
