--- a/po/sv.po
+++ b/po/sv.po
@@ -2444,7 +2444,7 @@ msgstr ""
 
 #: ../src/vmm-create.glade.h:16
 #, fuzzy
-msgid "Choose how you would like to install the opertaing system"
+msgid "Choose how you would like to install the operating system"
 msgstr "Välj hur du vill ansluta ditt nya virtuella system till värdnätverket."
 
 #: ../src/vmm-create.glade.h:17 ../src/vmm-host.glade.h:13
