--- a/po/te.po
+++ b/po/te.po
@@ -2399,7 +2399,7 @@ msgstr ""
 
 #: ../src/vmm-create.glade.h:16
 #, fuzzy
-msgid "Choose how you would like to install the opertaing system"
+msgid "Choose how you would like to install the operating system"
 msgstr "మీరు వర్చ్యువల్ ప్రదర్శనను యెలా దర్శించుటకు యిష్టపడతారో దయచేసి సూచించండి."
 
 #: ../src/vmm-create.glade.h:17 ../src/vmm-host.glade.h:13
