--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -2429,7 +2429,7 @@ msgstr ""
 
 #: ../src/vmm-create.glade.h:16
 #, fuzzy
-msgid "Choose how you would like to install the opertaing system"
+msgid "Choose how you would like to install the operating system"
 msgstr "請指定您希望如何檢視客座端畫面。"
 
 #: ../src/vmm-create.glade.h:17 ../src/vmm-host.glade.h:13
