--- a/po/it.po
+++ b/po/it.po
@@ -2492,7 +2492,7 @@ msgstr ""
 
 #: ../src/vmm-create.glade.h:16
 #, fuzzy
-msgid "Choose how you would like to install the opertaing system"
+msgid "Choose how you would like to install the operating system"
 msgstr "Si prega di indicare come si desidera visualizzare lo schermo ospite."
 
 #: ../src/vmm-create.glade.h:17 ../src/vmm-host.glade.h:13
