--- a/po/pl.po
+++ b/po/pl.po
@@ -2398,7 +2398,7 @@ msgid "Choose an operating systen type and version"
 msgstr "Wybierz typ i wersję systemu operacyjnego"
 
 #: ../src/vmm-create.glade.h:16
-msgid "Choose how you would like to install the opertaing system"
+msgid "Choose how you would like to install the operating system"
 msgstr "Wskaż, jak chcesz zainstalować system operacyjny"
 
 #: ../src/vmm-create.glade.h:17 ../src/vmm-host.glade.h:13
