--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -2497,7 +2497,7 @@ msgstr ""
 
 #: ../src/vmm-create.glade.h:16
 #, fuzzy
-msgid "Choose how you would like to install the opertaing system"
+msgid "Choose how you would like to install the operating system"
 msgstr "Por favor, indique como você gostaria de ver a tela do convidado."
 
 #: ../src/vmm-create.glade.h:17 ../src/vmm-host.glade.h:13
