--- a/po/ru.po
+++ b/po/ru.po
@@ -2463,7 +2463,7 @@ msgstr ""
 
 #: ../src/vmm-create.glade.h:16
 #, fuzzy
-msgid "Choose how you would like to install the opertaing system"
+msgid "Choose how you would like to install the operating system"
 msgstr "Укажите способ связи новой виртуальной системы с сетью."
 
 #: ../src/vmm-create.glade.h:17 ../src/vmm-host.glade.h:13
