--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -2370,7 +2370,7 @@ msgstr ""
 
 #: ../src/vmm-create.glade.h:16
 #, fuzzy
-msgid "Choose how you would like to install the opertaing system"
+msgid "Choose how you would like to install the operating system"
 msgstr "请指出您希望如何查看虚拟显示。"
 
 #: ../src/vmm-create.glade.h:17 ../src/vmm-host.glade.h:13
