Previous patch was actually from Laurent Léonard: update AUTHORS.

--- a/AUTHORS
+++ b/AUTHORS
@@ -57,6 +57,7 @@ Further patches have been submitted by:
   Gerrit Slomma <roadrunner_gs-at-web-dot-de>
   Dan Walsh <dwalsh-at-redhat-dot-com>
   Emmanuel Lacour <elacour-at-home-dn-dot-net>
+  Laurent Léonard <laurent-at-open-minds-dot-org>
 
   <...send a patch & get your name here...>
 
