Make Processor tab item in VM details show correctly
The Processor tab in VM details was not showing at all because of exception.
The exception occured everytime the tab was selected because of call to non
existing function get_type() that has been renamed to get_hv_type() in the
newest version of virt-manager's code by revision 1135.

--- a/AUTHORS
+++ b/AUTHORS
@@ -58,6 +58,7 @@ Further patches have been submitted by:
   Dan Walsh <dwalsh-at-redhat-dot-com>
   Emmanuel Lacour <elacour-at-home-dn-dot-net>
   Laurent Léonard <laurent-at-open-minds-dot-org>
+  Michal Novotny <minovotn-at-redhat-dot-com>
 
   <...send a patch & get your name here...>
 
