Update TODO to point to online roadmap.

--- a/TODO
+++ b/TODO
@@ -1,13 +1,4 @@
     Virt Manager TODO list
     ----------------------
 
-A list of random items which need implementing in no particular
-order / importance:
-
- 1. Handle renaming of domains. Libvirt caches the name when you get
-    the initial handle to the domain, so this may be more difficult
-    than it seems - particularly since we really want to minimize as
-    may XenD RPC/HTTP calls as possible
-
- 2. Implement tracking of network & disk stats. Needs support in
-    libvirt.
+Please see http://virt-manager.et.redhat.com/page/Roadmap
