Update docs with new mailing list address.

--- a/README
+++ b/README
@@ -45,20 +45,14 @@ http://hg.et.redhat.com/virt/applications/virtinst--devel
 Contact
 -------
 
-All comments / suggestions / patches should be directed to the et-mgmt-tools
+All comments / suggestions / patches should be directed to the virt-tools-list
 mailing list:
 
-  http://www.redhat.com/mailman/listinfo/et-mgmt-tools
+  http://www.redhat.com/mailman/listinfo/virt-tools-list
 
-Bugs should be reported at bugzilla.redhat.com, against the 'virt-manager'
-component.
+For bug reporting info, see:
 
-If you built from source, use Product: 'Virtualization Tools'.
-
-If you are using a package provided by Fedora, use Product: 'Fedora'.
-
-If you are using another distros package, either file a bug with them,
-or use the 'Virtualization Tools' product as above.
+http://virt-manager.org/page/BugReporting
 
 There are further project details on the website:
 
